# medical-rag

./: .gitignore  README.md  pyproject.toml
docs/: NAMING_CONVENTIONS.md  PROJECT_STRUCTURE.md
reports/formal/: BM25关键词索引构建报告_part000_limit153121.md  BM25关键词索引构建报告_smoke1000_limit153121.md  MeSH查询理解与增强模块说明_mesh.md  MeSH标准术语词典构建报告_mesh.md  PMC000全文chunk小样本测试详细报告_test3028_pmc000.md  RAG数据分析与设计说明_limit153121.md  RAG数据分析与设计说明_limit3028.md  全文chunk处理日志与统计报告_limit153121.md  全量BM25融合策略相关性评估_full_bm25_top50_q50_human_labels.md  医学RAG环境准备与验证报告_environment_setup.md  向量化与索引构建报告_limit153121_bge_base.md  向量化与索引构建报告_part000_limit153121_bge_base.md  向量索引质量验证_limit153121_bge_base.md  固定Reranker下融合策略对比报告_top50_q50.md  (+5 more)
scripts/: 00_check_environment.py  01_parse_pmc_xml.py  02_analyze_fields_quality.py  03_token_length_analysis.py  04_domain_sampling_review.py  04b_fulltext_domain_understanding.py  05_min_embedding_chroma_test.py  05b_build_chroma_limit500.py  06_full_text_split_strategy.py  07_fulltext_chroma_scale_test.py  07b_query_chroma_hashidf.py  08_build_fulltext_chroma_routed_minilm.py  10_analyze_oa_comm_153121.py  10_resume_oa_comm_153121.py  11_chunk_oa_comm_153121.py  12_build_chroma_bge_index.py  13_validate_chroma_index.py  14_query_chroma_index.py  15_test_query_understanding.py  16_build_mesh_terminology.py  17_test_mesh_query_understanding.py  18_build_bm25_index.py  19_run_retrieval_pipeline.py  20_test_retrieval_pipeline.py  21_compare_fusion_with_reranker.py  23_evaluate_retrieval_labels.py  check_gpu.py  parse_pmc_sample.py  test_chroma.py  test_ollama_langchain.py
(+137 files in other folders)
